--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format2/RVS-Devanagari-F2-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format2/RVS-Devanagari-F2-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 13-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 14-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1959,7 +1959,7 @@
 <td class='SuktaLabel'>[66] आचिकितानेति षडृचस्य सूक्तस्यात्रेयोरातहव्योमित्रावरुणावनुष्टुप् |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>आ</span><span class='style2'>चि॑कितान</span><span class='style1'>सु॒क्रतू᳚¦</span><span class='style2'>दे॒वौ</span><span class='style1'>म॑र्त</span><span class='style2'>रि॒शाद॑सा</span> |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p><span class='style1'>वरु॑णाय</span><span class='style2'>ऋ॒तपे᳚शसे</span><span class='style1'>दधी॒त¦</span><span class='style2'>प्रय॑से</span><span class='style1'>म॒हे</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
+<td class='VargaStyle2'><span class='style1'>आ</span><span class='style2'>चि॑कितान</span><span class='style1'>सु॒क्रतू᳚¦</span><span class='style2'>दे॒वौ</span><span class='style1'>म॑र्त</span><span class='style2'>रि॒शाद॑सा</span> |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p><span class='style1'>वरु॑णाय</span><span class='style2'>ऋ॒तपे᳚शसे¦</span><span class='style1'>दधी॒त</span><span class='style2'>प्रय॑से</span><span class='style1'>म॒हे</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>ता</span><span class='style2'>हि</span><span class='style1'>क्ष॒त्रमवि॑ह्रुतं¦</span><span class='style2'>स॒म्यग॑सु॒र्य१॑(अ॒)माशा᳚ते</span> |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p><span class='style1'>अध᳚</span><span class='style2'>व्र॒तेव॒</span><span class='style1'>मानु॑षं॒¦</span><span class='style2'>स्व१॑(अ॒)र्ण</span><span class='style1'>धा᳚यि</span><span class='style2'>दर्श॒तम्</span> || <span class='MantraNumbering'>{2/6}{5.66.2}{5.5.10.2}{4.4.4.2}{420, 4226}</span></td>
@@ -2211,7 +2211,7 @@
 <td class='VargaStyle1'><span class='style1'>अश्वि॑ना</span><span class='style2'>वाजिनीवसू¦</span><span class='style1'>जु॒षेथां᳚</span><span class='style2'>य॒ज्ञमि॒ष्टये᳚</span> |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | उष्णिक्}</span><p><span class='style1'>हं॒सावि॑व</span><span class='style2'>पतत॒मा</span><span class='style1'>सु॒ताँ,</span><span class='style2'>उप॑</span> || <span class='MantraNumbering'>{3/9}{5.78.3}{5.6.6.3}{4.4.19.3}{432, 4296}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>अत्रि॒र्यद्‌</span><span class='style2'>वा᳚मव॒रोह᳚न्नृ॒बीस॒¦मजो᳚हवी॒न्नाध॑मानेव॒</span><span class='style1'>योषा᳚</span> |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | त्रिष्टुप्}</span><p><span class='style1'>श्ये॒नस्य॑</span><span class='style2'>चि॒ज्जव॑सा॒</span><span class='style1'>नूत॑ने॒ना¦ऽऽग॑च्छतमश्विना॒</span><span class='style2'>शंत॑मेन</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
+<td class='VargaStyle1'><span class='style1'>अत्रि॒र्यद्‌</span><span class='style2'>वा᳚मव॒रोह᳚न्नृ॒बीस॒¦मजो᳚हवी॒न्नाध॑मानेव॒</span><span class='style1'>योषा᳚</span> |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | त्रिष्टुप्}</span><p><span class='style1'>श्ये॒नस्य॑</span><span class='style2'>चि॒ज्जव॑सा॒</span><span class='style1'>नूत॑ने॒ना¦</span><span class='style2'>ऽऽग॑च्छतमश्विना॒</span><span class='style1'>शंत॑मेन</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>वि</span><span class='style2'>जि॑हीष्व</span><span class='style1'>वनस्पते॒¦</span><span class='style2'>योनिः॒</span><span class='style1'>सूष्य᳚न्त्या,</span><span class='style2'>इव</span> |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | अनुष्टुप्}</span><p><span class='style1'>श्रु॒तं</span><span class='style2'>मे᳚,</span><span class='style1'>अश्विना॒</span><span class='style2'>हवं᳚¦</span><span class='style1'>स॒प्तव॑ध्रिं</span><span class='style2'>च</span><span class='style1'>मुञ्चतम्</span> || <span class='MantraNumbering'>{5/9}{5.78.5}{5.6.6.5}{4.4.20.1}{432, 4298}</span></td>
