--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format2/RVS-Kannada-F2-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format2/RVS-Kannada-F2-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 13-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 14-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1959,7 +1959,7 @@
 <td class='SuktaLabel'>[66] ಆಚಿಕಿತಾನೇತಿ ಷಡೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋರಾತಹವ್ಯೋಮಿತ್ರಾವರುಣಾವನುಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ಆ</span><span class='style2'>ಚಿ॑ಕಿತಾನ</span><span class='style1'>ಸು॒ಕ್ರತೂ᳚¦</span><span class='style2'>ದೇ॒ವೌ</span><span class='style1'>ಮ॑ರ್‍ತ</span><span class='style2'>ರಿ॒ಶಾದ॑ಸಾ</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p><span class='style1'>ವರು॑ಣಾಯ</span><span class='style2'>ಋ॒ತಪೇ᳚ಶಸೇ</span><span class='style1'>ದಧೀ॒ತ¦</span><span class='style2'>ಪ್ರಯ॑ಸೇ</span><span class='style1'>ಮ॒ಹೇ</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
+<td class='VargaStyle2'><span class='style1'>ಆ</span><span class='style2'>ಚಿ॑ಕಿತಾನ</span><span class='style1'>ಸು॒ಕ್ರತೂ᳚¦</span><span class='style2'>ದೇ॒ವೌ</span><span class='style1'>ಮ॑ರ್‍ತ</span><span class='style2'>ರಿ॒ಶಾದ॑ಸಾ</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p><span class='style1'>ವರು॑ಣಾಯ</span><span class='style2'>ಋ॒ತಪೇ᳚ಶಸೇ¦</span><span class='style1'>ದಧೀ॒ತ</span><span class='style2'>ಪ್ರಯ॑ಸೇ</span><span class='style1'>ಮ॒ಹೇ</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>ತಾ</span><span class='style2'>ಹಿ</span><span class='style1'>ಕ್ಷ॒ತ್ರಮವಿ॑ಹ್ರುತಂ¦</span><span class='style2'>ಸ॒ಮ್ಯಗ॑ಸು॒ರ್‍ಯ೧॑(ಅ॒)ಮಾಶಾ᳚ತೇ</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p><span class='style1'>ಅಧ᳚</span><span class='style2'>ವ್ರ॒ತೇವ॒</span><span class='style1'>ಮಾನು॑ಷಂ॒¦</span><span class='style2'>ಸ್ವ೧॑(ಅ॒)ರ್ಣ</span><span class='style1'>ಧಾ᳚ಯಿ</span><span class='style2'>ದರ್ಶ॒ತಂ</span> || <span class='MantraNumbering'>{2/6}{5.66.2}{5.5.10.2}{4.4.4.2}{420, 4226}</span></td>
@@ -2211,7 +2211,7 @@
 <td class='VargaStyle1'><span class='style1'>ಅಶ್ವಿ॑ನಾ</span><span class='style2'>ವಾಜಿನೀವಸೂ¦</span><span class='style1'>ಜು॒ಷೇಥಾಂ᳚</span><span class='style2'>ಯ॒ಜ್ಞಮಿ॒ಷ್ಟಯೇ᳚</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ಉಷ್ಣಿಕ್}</span><p><span class='style1'>ಹಂ॒ಸಾವಿ॑ವ</span><span class='style2'>ಪತತ॒ಮಾ</span><span class='style1'>ಸು॒ತಾಁ,</span><span class='style2'>ಉಪ॑</span> || <span class='MantraNumbering'>{3/9}{5.78.3}{5.6.6.3}{4.4.19.3}{432, 4296}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>ಅತ್ರಿ॒ರ್‍ಯದ್‌</span><span class='style2'>ವಾ᳚ಮವ॒ರೋಹ᳚ನ್ನೃ॒ಬೀಸ॒¦ಮಜೋ᳚ಹವೀ॒ನ್ನಾಧ॑ಮಾನೇವ॒</span><span class='style1'>ಯೋಷಾ᳚</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p><span class='style1'>ಶ್ಯೇ॒ನಸ್ಯ॑</span><span class='style2'>ಚಿ॒ಜ್ಜವ॑ಸಾ॒</span><span class='style1'>ನೂತ॑ನೇ॒ನಾ¦ಽಽಗ॑ಚ್ಛತಮಶ್ವಿನಾ॒</span><span class='style2'>ಶಂತ॑ಮೇನ</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
+<td class='VargaStyle1'><span class='style1'>ಅತ್ರಿ॒ರ್‍ಯದ್‌</span><span class='style2'>ವಾ᳚ಮವ॒ರೋಹ᳚ನ್ನೃ॒ಬೀಸ॒¦ಮಜೋ᳚ಹವೀ॒ನ್ನಾಧ॑ಮಾನೇವ॒</span><span class='style1'>ಯೋಷಾ᳚</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p><span class='style1'>ಶ್ಯೇ॒ನಸ್ಯ॑</span><span class='style2'>ಚಿ॒ಜ್ಜವ॑ಸಾ॒</span><span class='style1'>ನೂತ॑ನೇ॒ನಾ¦</span><span class='style2'>ಽಽಗ॑ಚ್ಛತಮಶ್ವಿನಾ॒</span><span class='style1'>ಶಂತ॑ಮೇನ</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>ವಿ</span><span class='style2'>ಜಿ॑ಹೀಷ್ವ</span><span class='style1'>ವನಸ್ಪತೇ॒¦</span><span class='style2'>ಯೋನಿಃ॒</span><span class='style1'>ಸೂಷ್ಯಂ᳚ತ್ಯಾ,</span><span class='style2'>ಇವ</span> |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p><span class='style1'>ಶ್ರು॒ತಂ</span><span class='style2'>ಮೇ᳚,</span><span class='style1'>ಅಶ್ವಿನಾ॒</span><span class='style2'>ಹವಂ᳚¦</span><span class='style1'>ಸ॒ಪ್ತವ॑ಧ್ರಿಂ</span><span class='style2'>ಚ</span><span class='style1'>ಮುಂಚತಂ</span> || <span class='MantraNumbering'>{5/9}{5.78.5}{5.6.6.5}{4.4.20.1}{432, 4298}</span></td>
