--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format2/RVS-Malayalam-F2-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format2/RVS-Malayalam-F2-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 13-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 14-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1680,7 +1680,7 @@
 <td class='SuktaLabel'>[58] ആചികിതാനേതി ഷഡൃചസ്യ സൂക്തസ്യാത്രേയോരാതഹവ്യോമിത്രാവരുണാവനുഷ്ടുപ് |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ആ</span><span class='style2'>ചി॑കിതാന</span><span class='style1'>സു॒ക്രതൂ᳚¦</span><span class='style2'>ദേ॒വൗ</span><span class='style1'>മ॑ർത</span><span class='style2'>രി॒ശാദ॑സാ</span> |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p><span class='style1'>വരു॑ണായ</span><span class='style2'>ഋ॒തപേ᳚ശസേ</span><span class='style1'>ദധീ॒ത¦</span><span class='style2'>പ്രയ॑സേ</span><span class='style1'>മ॒ഹേ</span> || <span class='MantraNumbering'>{1/6}{4.4.4.1}{5.66.1}{5.5.10.1}{420, 4225}</span></td>
+<td class='VargaStyle2'><span class='style1'>ആ</span><span class='style2'>ചി॑കിതാന</span><span class='style1'>സു॒ക്രതൂ᳚¦</span><span class='style2'>ദേ॒വൗ</span><span class='style1'>മ॑ർത</span><span class='style2'>രി॒ശാദ॑സാ</span> |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p><span class='style1'>വരു॑ണായ</span><span class='style2'>ഋ॒തപേ᳚ശസേ¦</span><span class='style1'>ദധീ॒ത</span><span class='style2'>പ്രയ॑സേ</span><span class='style1'>മ॒ഹേ</span> || <span class='MantraNumbering'>{1/6}{4.4.4.1}{5.66.1}{5.5.10.1}{420, 4225}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>താ</span><span class='style2'>ഹി</span><span class='style1'>ക്ഷ॒ത്രമവി॑ഹ്രുതം¦</span><span class='style2'>സ॒മ്യഗ॑സു॒ര്യ1॑(അ॒)മാശാ᳚തേ</span> |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p><span class='style1'>അധ᳚</span><span class='style2'>വ്ര॒തേവ॒</span><span class='style1'>മാനു॑ഷം॒¦</span><span class='style2'>സ്വ1॑(അ॒)ര്ണ</span><span class='style1'>ധാ᳚യി</span><span class='style2'>ദർശ॒തം</span> || <span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
@@ -1932,7 +1932,7 @@
 <td class='VargaStyle1'><span class='style1'>അശ്വി॑നാ</span><span class='style2'>വാജിനീവസൂ¦</span><span class='style1'>ജു॒ഷേഥാം᳚</span><span class='style2'>യ॒ജ്ഞമി॒ഷ്ടയേ᳚</span> |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ഉഷ്ണിക്}</span><p><span class='style1'>ഹം॒സാവി॑വ</span><span class='style2'>പതത॒മാ</span><span class='style1'>സു॒താഁ,</span><span class='style2'>ഉപ॑</span> || <span class='MantraNumbering'>{3/9}{4.4.19.3}{5.78.3}{5.6.6.3}{432, 4296}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>അത്രി॒ര്യദ്‌</span><span class='style2'>വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒¦മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒</span><span class='style1'>യോഷാ᳚</span> |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p><span class='style1'>ശ്യേ॒നസ്യ॑</span><span class='style2'>ചി॒ജ്ജവ॑സാ॒</span><span class='style1'>നൂത॑നേ॒നാ¦ഽഽഗ॑ച്ഛതമശ്വിനാ॒</span><span class='style2'>ശന്ത॑മേന</span> || <span class='MantraNumbering'>{4/9}{4.4.19.4}{5.78.4}{5.6.6.4}{432, 4297}</span></td>
+<td class='VargaStyle1'><span class='style1'>അത്രി॒ര്യദ്‌</span><span class='style2'>വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒¦മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒</span><span class='style1'>യോഷാ᳚</span> |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p><span class='style1'>ശ്യേ॒നസ്യ॑</span><span class='style2'>ചി॒ജ്ജവ॑സാ॒</span><span class='style1'>നൂത॑നേ॒നാ¦</span><span class='style2'>ഽഽഗ॑ച്ഛതമശ്വിനാ॒</span><span class='style1'>ശന്ത॑മേന</span> || <span class='MantraNumbering'>{4/9}{4.4.19.4}{5.78.4}{5.6.6.4}{432, 4297}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>വി</span><span class='style2'>ജി॑ഹീഷ്വ</span><span class='style1'>വനസ്പതേ॒¦</span><span class='style2'>യോനിഃ॒</span><span class='style1'>സൂഷ്യ᳚ന്ത്യാ,</span><span class='style2'>ഇവ</span> |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p><span class='style1'>ശ്രു॒തം</span><span class='style2'>മേ᳚,</span><span class='style1'>അശ്വിനാ॒</span><span class='style2'>ഹവം᳚¦</span><span class='style1'>സ॒പ്തവ॑ധ്രിം</span><span class='style2'>ച</span><span class='style1'>മുഞ്ചതം</span> || <span class='MantraNumbering'>{5/9}{4.4.20.1}{5.78.5}{5.6.6.5}{432, 4298}</span></td>
