--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format2/RVS-Tamil-F2-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format2/RVS-Tamil-F2-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 13-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 14-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1959,7 +1959,7 @@
 <td class='SuktaLabel'>[66] ஆசிகிதானேதி ஷட்³ருʼசஸ்ய ஸூக்தஸ்யாத்ரேயோராதஹவ்யோமித்ராவருணாவனுஷ்டுப் |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ஆ</span><span class='style2'>சி॑கிதான</span><span class='style1'>ஸு॒க்ரதூ᳚¦</span><span class='style2'>தே³॒வௌ</span><span class='style1'>ம॑ர்த</span><span class='style2'>ரி॒ஶாத³॑ஸா</span> |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p><span class='style1'>வரு॑ணாய</span><span class='style2'>ரு॒ʼதபே᳚ஶஸே</span><span class='style1'>த³தீ⁴॒த¦</span><span class='style2'>ப்ரய॑ஸே</span><span class='style1'>ம॒ஹே</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
+<td class='VargaStyle2'><span class='style1'>ஆ</span><span class='style2'>சி॑கிதான</span><span class='style1'>ஸு॒க்ரதூ᳚¦</span><span class='style2'>தே³॒வௌ</span><span class='style1'>ம॑ர்த</span><span class='style2'>ரி॒ஶாத³॑ஸா</span> |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p><span class='style1'>வரு॑ணாய</span><span class='style2'>ரு॒ʼதபே᳚ஶஸே¦</span><span class='style1'>த³தீ⁴॒த</span><span class='style2'>ப்ரய॑ஸே</span><span class='style1'>ம॒ஹே</span> || <span class='MantraNumbering'>{1/6}{5.66.1}{5.5.10.1}{4.4.4.1}{420, 4225}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>தா</span><span class='style2'>ஹி</span><span class='style1'>க்ஷ॒த்ரமவி॑ஹ்ருதம்ʼ¦</span><span class='style2'>ஸ॒ம்யக³॑ஸு॒ர்ய1॑(அ॒)மாஶா᳚தே</span> |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p><span class='style1'>அத⁴᳚</span><span class='style2'>வ்ர॒தேவ॒</span><span class='style1'>மானு॑ஷம்॒ʼ¦</span><span class='style2'>ஸ்வ1॑(அ॒)ர்ண</span><span class='style1'>தா⁴᳚யி</span><span class='style2'>த³ர்ஶ॒தம்</span> || <span class='MantraNumbering'>{2/6}{5.66.2}{5.5.10.2}{4.4.4.2}{420, 4226}</span></td>
@@ -2211,7 +2211,7 @@
 <td class='VargaStyle1'><span class='style1'>அஶ்வி॑னா</span><span class='style2'>வாஜினீவஸூ¦</span><span class='style1'>ஜு॒ஷேதா²ம்᳚ʼ</span><span class='style2'>ய॒ஜ்ஞமி॒ஷ்டயே᳚</span> |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | உஷ்ணிக்}</span><p><span class='style1'>ஹம்॒ʼஸாவி॑வ</span><span class='style2'>பதத॒மா</span><span class='style1'>ஸு॒தாம்ˮ,</span><span class='style2'>உப॑</span> || <span class='MantraNumbering'>{3/9}{5.78.3}{5.6.6.3}{4.4.19.3}{432, 4296}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>அத்ரி॒ர்யத்³‌</span><span class='style2'>வா᳚மவ॒ரோஹ᳚ன்ன்ரு॒ʼபீ³ஸ॒¦மஜோ᳚ஹவீ॒ன்னாத⁴॑மானேவ॒</span><span class='style1'>யோஷா᳚</span> |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p><span class='style1'>ஶ்யே॒னஸ்ய॑</span><span class='style2'>சி॒ஜ்ஜவ॑ஸா॒</span><span class='style1'>நூத॑னே॒னா¦(ஆ)க³॑ச்ச²தமஶ்வினா॒</span><span class='style2'>ஶந்த॑மேன</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
+<td class='VargaStyle1'><span class='style1'>அத்ரி॒ர்யத்³‌</span><span class='style2'>வா᳚மவ॒ரோஹ᳚ன்ன்ரு॒ʼபீ³ஸ॒¦மஜோ᳚ஹவீ॒ன்னாத⁴॑மானேவ॒</span><span class='style1'>யோஷா᳚</span> |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p><span class='style1'>ஶ்யே॒னஸ்ய॑</span><span class='style2'>சி॒ஜ்ஜவ॑ஸா॒</span><span class='style1'>நூத॑னே॒னா¦</span><span class='style2'>(ஆ)க³॑ச்ச²தமஶ்வினா॒</span><span class='style1'>ஶந்த॑மேன</span> || <span class='MantraNumbering'>{4/9}{5.78.4}{5.6.6.4}{4.4.19.4}{432, 4297}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>வி</span><span class='style2'>ஜி॑ஹீஷ்வ</span><span class='style1'>வனஸ்பதே॒¦</span><span class='style2'>யோனி॒꞉</span><span class='style1'>ஸூஷ்ய᳚ந்த்யா,</span><span class='style2'>இவ</span> |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p><span class='style1'>ஶ்ரு॒தம்ʼ</span><span class='style2'>மே᳚,</span><span class='style1'>அஶ்வினா॒</span><span class='style2'>ஹவம்᳚ʼ¦</span><span class='style1'>ஸ॒ப்தவ॑த்⁴ரிம்ʼ</span><span class='style2'>ச</span><span class='style1'>முஞ்சதம்</span> || <span class='MantraNumbering'>{5/9}{5.78.5}{5.6.6.5}{4.4.20.1}{432, 4298}</span></td>
