--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format2/RVS-Telugu-F2-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format2/RVS-Telugu-F2-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 13-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 14-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1680,7 +1680,7 @@
 <td class='SuktaLabel'>[58] ఆచికితానేతి షడృచస్య సూక్తస్యాత్రేయోరాతహవ్యోమిత్రావరుణావనుష్టుప్ |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ఆ</span><span class='style2'>చి॑కితాన</span><span class='style1'>సు॒క్రతూ᳚¦</span><span class='style2'>దే॒వౌ</span><span class='style1'>మ॑ర్త</span><span class='style2'>రి॒శాద॑సా</span> |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p><span class='style1'>వరు॑ణాయ</span><span class='style2'>ఋ॒తపే᳚శసే</span><span class='style1'>దధీ॒త¦</span><span class='style2'>ప్రయ॑సే</span><span class='style1'>మ॒హే</span> || <span class='MantraNumbering'>{1/6}{4.4.4.1}{5.66.1}{5.5.10.1}{420, 4225}</span></td>
+<td class='VargaStyle2'><span class='style1'>ఆ</span><span class='style2'>చి॑కితాన</span><span class='style1'>సు॒క్రతూ᳚¦</span><span class='style2'>దే॒వౌ</span><span class='style1'>మ॑ర్త</span><span class='style2'>రి॒శాద॑సా</span> |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p><span class='style1'>వరు॑ణాయ</span><span class='style2'>ఋ॒తపే᳚శసే¦</span><span class='style1'>దధీ॒త</span><span class='style2'>ప్రయ॑సే</span><span class='style1'>మ॒హే</span> || <span class='MantraNumbering'>{1/6}{4.4.4.1}{5.66.1}{5.5.10.1}{420, 4225}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>తా</span><span class='style2'>హి</span><span class='style1'>క్ష॒త్రమవి॑హ్రుతం¦</span><span class='style2'>స॒మ్యగ॑సు॒ర్య1॑(అ॒)మాశా᳚తే</span> |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p><span class='style1'>అధ᳚</span><span class='style2'>వ్ర॒తేవ॒</span><span class='style1'>మాను॑షం॒¦</span><span class='style2'>స్వ1॑(అ॒)ర్ణ</span><span class='style1'>ధా᳚యి</span><span class='style2'>దర్శ॒తం</span> || <span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
@@ -1932,7 +1932,7 @@
 <td class='VargaStyle1'><span class='style1'>అశ్వి॑నా</span><span class='style2'>వాజినీవసూ¦</span><span class='style1'>జు॒షేథాం᳚</span><span class='style2'>య॒జ్ఞమి॒ష్టయే᳚</span> |<span class='RishiDevChandas'>{ఆత్రేయః సప్తవధ్రిః | అశ్వినౌ | ఉష్ణిక్}</span><p><span class='style1'>హం॒సావి॑వ</span><span class='style2'>పతత॒మా</span><span class='style1'>సు॒తాఀ,</span><span class='style2'>ఉప॑</span> || <span class='MantraNumbering'>{3/9}{4.4.19.3}{5.78.3}{5.6.6.3}{432, 4296}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>అత్రి॒ర్యద్‌</span><span class='style2'>వా᳚మవ॒రోహ᳚న్నృ॒బీస॒¦మజో᳚హవీ॒న్నాధ॑మానేవ॒</span><span class='style1'>యోషా᳚</span> |<span class='RishiDevChandas'>{ఆత్రేయః సప్తవధ్రిః | అశ్వినౌ | త్రిష్టుప్}</span><p><span class='style1'>శ్యే॒నస్య॑</span><span class='style2'>చి॒జ్జవ॑సా॒</span><span class='style1'>నూత॑నే॒నా¦ఽఽగ॑చ్ఛతమశ్వినా॒</span><span class='style2'>శంత॑మేన</span> || <span class='MantraNumbering'>{4/9}{4.4.19.4}{5.78.4}{5.6.6.4}{432, 4297}</span></td>
+<td class='VargaStyle1'><span class='style1'>అత్రి॒ర్యద్‌</span><span class='style2'>వా᳚మవ॒రోహ᳚న్నృ॒బీస॒¦మజో᳚హవీ॒న్నాధ॑మానేవ॒</span><span class='style1'>యోషా᳚</span> |<span class='RishiDevChandas'>{ఆత్రేయః సప్తవధ్రిః | అశ్వినౌ | త్రిష్టుప్}</span><p><span class='style1'>శ్యే॒నస్య॑</span><span class='style2'>చి॒జ్జవ॑సా॒</span><span class='style1'>నూత॑నే॒నా¦</span><span class='style2'>ఽఽగ॑చ్ఛతమశ్వినా॒</span><span class='style1'>శంత॑మేన</span> || <span class='MantraNumbering'>{4/9}{4.4.19.4}{5.78.4}{5.6.6.4}{432, 4297}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>వి</span><span class='style2'>జి॑హీష్వ</span><span class='style1'>వనస్పతే॒¦</span><span class='style2'>యోనిః॒</span><span class='style1'>సూష్యం᳚త్యా,</span><span class='style2'>ఇవ</span> |<span class='RishiDevChandas'>{ఆత్రేయః సప్తవధ్రిః | అశ్వినౌ | అనుష్టుప్}</span><p><span class='style1'>శ్రు॒తం</span><span class='style2'>మే᳚,</span><span class='style1'>అశ్వినా॒</span><span class='style2'>హవం᳚¦</span><span class='style1'>స॒ప్తవ॑ధ్రిం</span><span class='style2'>చ</span><span class='style1'>ముంచతం</span> || <span class='MantraNumbering'>{5/9}{4.4.20.1}{5.78.5}{5.6.6.5}{432, 4298}</span></td>
